20080629
 - (djm) OpenBSD CVS Sync
   - martynas@cvs.openbsd.org 2008/06/21 07:46:46
     [sftp.c]
     use optopt to get invalid flag, instead of return value of getopt,
     which is always '?';  ok djm@
   - otto@cvs.openbsd.org 2008/06/25 11:13:43
     [key.c]
     add key length to visual fingerprint; zap magical constants;
     ok grunk@ djm@

20080628
 - (djm) [RFC.nroff contrib/cygwin/Makefile contrib/suse/openssh.spec]
   RFC.nroff lacks a license, remove it (it is long gone in OpenBSD).

20080626
 - (djm) [Makefile.in moduli.5] Include moduli(5) manpage from OpenBSD.
   (bz#1372)
 - (djm) [ contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
   [contrib/suse/openssh.spec] Include moduli.5 in RPM spec files.

20080616
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2008/06/16 13:22:53
     [session.c channels.c]
     Rename the isatty argument to is_tty so we don't shadow
     isatty(3).  ok markus@
 - (dtucker) [channels.c] isatty -> is_tty here too.

20080615
 - (dtucker) [configure.ac] Enable -fno-builtin-memset when using gcc.
 - OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2008/06/14 15:49:48
     [sshd.c]
     wrap long line at 80 chars
   - dtucker@cvs.openbsd.org 2008/06/14 17:07:11
     [sshd.c]
     ensure default umask disallows at least group and world write; ok djm@
   - djm@cvs.openbsd.org 2008/06/14 18:33:43
     [session.c]
     suppress the warning message from chdir(homedir) failures
     when chrooted (bz#1461); ok dtucker
   - dtucker@cvs.openbsd.org 2008/06/14 19:42:10
     [scp.1]
     Mention that scp follows symlinks during -r.  bz #1466,
     from nectar at apple
   - dtucker@cvs.openbsd.org 2008/06/15 16:55:38
     [sshd_config.5]
     MaxSessions is allowed in a Match block too
   - dtucker@cvs.openbsd.org 2008/06/15 16:58:40
     [servconf.c sshd_config.5]
     Allow MaxAuthTries within a Match block.  ok djm@
   - djm@cvs.openbsd.org 2008/06/15 20:06:26
     [channels.c channels.h session.c]